Audio Processing - Dev

--- a/aws/migration_db_S3/migrate_clean_S3.ipynb
+++ b/aws/migration_db_S3/migrate_clean_S3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,47 +945,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['TRAAAAK128F9318786.mp3',\n",
-       " 'TRAAAAV128F421A322.mp3',\n",
-       " 'TRAAAED128E0783FAB.mp3',\n",
-       " 'TRAAAEM128F93347B9.mp3',\n",
-       " 'TRAAAEW128F42930C0.mp3',\n",
-       " 'TRAAAIC128F14A5138.mp3',\n",
-       " 'TRAAAZF12903CCCF6B.mp3',\n",
-       " 'TRAAAZU128F4226F7A.mp3']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import tqdm.notebook"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\david\\.virtualenvs\\project-pfx4texb\\lib\\site-packages\\ipykernel_launcher.py:2: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a790f0c6759447eea055305d57195224",
+       "model_id": "3970b3919962442f8a09955984fff88a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1006,7 +981,7 @@
    ],
    "source": [
     "set_track_id = set()\n",
-    "for f1 in tqdm.tqdm_notebook(ascii_uppercase):\n",
+    "for f1 in tqdm.notebook.tqdm(ascii_uppercase):\n",
     "    for f2 in ascii_uppercase:\n",
     "        for f3 in ascii_uppercase:\n",
     "            path_ls = f'fs/{f1}/{f2}/{f3}'\n",
@@ -1017,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,16 +1001,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "170004"
+       "385594"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,11 +1030,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_songs_S3_down.to_csv(\"tracks_S3.csv\", sep=\";\", index=False)"
+    "df_songs_S3_down.to_csv(\"tracks_S3_v2.csv\", sep=\";\", index=False)"
    ]
   },
   {
